cleaning the pages, link and img path functioning, css update

--- a/intro.html
+++ b/intro.html
@@ -1,6 +1,6 @@
-<div style="position: relative; display: inline-block;">
-    <img src="www/images/gifted_child.jpg" alt="Gifted Child" style="width: 100%;">
-    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; background-color: rgba(0, 0, 0, 0.5); padding: 10px; font-size: 60px; text-align: center;">
-      Een hoogbegaafde volwassene is een snelle en slimme denker, die complexe zaken aankan.
-    </div>
+<div class="overlay-img-container">
+  <img src="www/images/gifted_child.jpg" alt="Gifted Child" class="image">
+  <div class="overlay-text">
+    Een hoogbegaafde leerling kan uitgroeien tot een hoogbegaafde volwassene, mits omgeving samenwerkt om de juiste ontwikkeling mogelijk te maken.
+  </div>
 </div>
