changing the structure of the directory, adding projects files and algemene voorwaarden, updating css when phone

--- a/content/intro.html
+++ b/content/intro.html
@@ -1,5 +1,5 @@
 <div class="overlay-img-container">
-  <img src="www/images/gifted_child.jpg" alt="Gifted Child" class="image">
+  <img src="../www/images/gifted_child.jpg" alt="Gifted Child" class="image">
   <div class="overlay-text">
     Een hoogbegaafde leerling kan uitgroeien tot een hoogbegaafde volwassene, mits omgeving samenwerkt om de juiste ontwikkeling mogelijk te maken.
   </div>
