--- a/content/intro.html
+++ b/content/intro.html
@@ -1,10 +1,10 @@
 <div class="overlay-img-container">
   <img src="../www/images/hands-raised-28516912.jpg" alt="Gifted Child" class="image">
   <div class="overlay-text-left">
-    Een hoogbegaafde leerling kan uitgroeien tot een hoogbegaafde volwassene, mits omgeving samenwerkt om de juiste ontwikkeling mogelijk te maken.
-  </div>
+    Een hoogbegaafde volwassene is een snelle en slimme denker, die complexe zaken aankan. Autonoom, nieuwsgierig en gedreven van aard. Een sensitief en emotioneel mens, intens levend. Hij of zij schept plezier in creëren.<br>
+    (Maud Kooijman-van Tiel, 2008)
+    </div>
   <div class="overlay-text-right">
-    Een hoogbegaafde volwassene is een snelle en slimme denker, die complexe zaken aankan. Autonoom, nieuwsgierig en gedreven van aard. Een sensitief en emotioneel mens, intens levend. Hij of zij schept plezier in creëren.
-:   (Maud Kooijman-van Tiel, 2008)
+    Een hoogbegaafde leerling kan uitgroeien tot een hoogbegaafde volwassene, mits omgeving samenwerkt om de juiste ontwikkeling mogelijk te maken.
   </div>
 </div>
