tekstuele aanpassingen fase 1

--- a/content/intro.html
+++ b/content/intro.html
@@ -5,6 +5,6 @@
     (Maud Kooijman-van Tiel, 2008)
     </div>
   <div class="overlay-text-right">
-    Een hoogbegaafde leerling kan uitgroeien tot een hoogbegaafde volwassene, mits omgeving samenwerkt om de juiste ontwikkeling mogelijk te maken.
+    Een hoogbegaafd kind/ hoogbegaafde jongere kan uitgroeien tot een hoogbegaafde volwassene, mits de omgeving samenwerkt om de juiste ontwikkeling mogelijk te maken (Marijke Schekkerman, 2010).
   </div>
 </div>
