--- a/content/intro.html
+++ b/content/intro.html
@@ -1,10 +1,11 @@
 <div class="overlay-img-container">
-  <img src="../www/images/hands-raised-28516912.jpg" alt="Gifted Child" class="image">
-  <div class="overlay-text-left">
-    Een hoogbegaafde volwassene is een snelle en slimme denker, die complexe zaken aankan. Autonoom, nieuwsgierig en gedreven van aard. Een sensitief en emotioneel mens, intens levend. Hij of zij schept plezier in creëren.<br>
+  <img src="../www/images/hands-raised-28516912.jpg" alt="Children in class" class="image">
+  <div class="overlay-text overlay-text-left">
+    Een hoogbegaafde volwassene is een snelle en slimme denker, die complexe zaken aankan. Autonoom, nieuwsgierig en gedreven van aard. Een sensitief en emotioneel mens. Hij of zij schept plezier in creëren.<br>
     (Maud Kooijman-van Tiel, 2008)
     </div>
-  <div class="overlay-text-right">
-    Een hoogbegaafd kind/ hoogbegaafde jongere kan uitgroeien tot een hoogbegaafde volwassene, mits de omgeving samenwerkt om de juiste ontwikkeling mogelijk te maken (Marijke Schekkerman, 2010).
+  <div class="overlay-text overlay-text-right">
+    Een hoogbegaafd kind/jongere kan uitgroeien tot een hoogbegaafde volwassene, mits de omgeving samenwerkt om de juiste ontwikkeling mogelijk te maken.<br>
+    (Marijke Schekkerman, 2010)
   </div>
 </div>
